employee-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-demo
  template:
    metadata:
      labels:
        app: employee-demo
    spec:
      containers:
      - name: employee-demo
        image: 360devtester/employee-demo:0.0.1
        livenessProbe:  # Liveness probe configuration
          httpGet:
            path: /health
            port: 9190  # Port where your application listens
            initialDelaySeconds: 15  # Wait 15 seconds before checks
            periodSeconds: 20  # Check every 20 seconds
            timeoutSeconds: 5  # Maximum response time for a healthy check
        readinessProbe:  # Readiness probe configuration (optional)
          httpGet:
            path: /health  # Path to your readiness endpoint (optional)
            port: 9190  # Port where your application listens (optional)
            initialDelaySeconds: 30  # Wait 30 seconds before checks (optional)
            periodSeconds: 10  # Check every 10 seconds (optional)
            timeoutSeconds: 5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9190
        resources:
          requests:
            cpu: "250m"  # Request 0.25 CPU
          limits:
            cpu: "250m"  # Limit to 0.25 CPU
