customer-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-demo-service
  namespace: demo
spec:
  selector:
    app: customer-demo
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
