employee-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-demo-service
  namespace: demo
spec:
  selector:
    app: employee-demo
  ports:
    - protocol: TCP
      port: 9190
      targetPort: 9190
