employee-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-demo-np-service
  namespace: demo
spec:
  selector:
    app: employee-demo
  ports:
    - protocol: TCP
      port: 9190         # The port that the service will serve on
      targetPort: 9190 # The port on the container
      nodePort: 30008  # The port on each node
  type: NodePort
